--- a/repository-layout/header.html
+++ b/repository-layout/header.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Microlinux Slackware Repository</title>
+<title>Microlinux Software Repository</title>
 <style type="text/css">
 
 body {
@@ -47,4 +47,4 @@ pre img {
 </style>
 </head>
 <body>
-<h1>Microlinux Slackware Repository</h1>
+<h1>Microlinux Software Repository</h1>
