--- a/repository-layout/footer.html
+++ b/repository-layout/footer.html
@@ -1,9 +1,5 @@
-<pre>MLES = Microlinux Enterprise Server
-MLWS = Microlinux Enterprise Workstation (based on KDE)
-MLED = Microlinux Enterprise Desktop (based on Xfce)
+<pre>Extra Software for Slackware Linux, packaged by Microlinux.
 Complete sources, build scripts and step-by-step documentation included. 
 Binary packages provided for 32-bit and 64-bit architectures.</pre>
-<pre>Partially mirrored at <a href="http://taper.alienbase.nl/mirrors/people/kikinovak">http://taper.alienbase.nl/mirrors/people/kikinovak</a>.</pre>
-<pre>Special thanks to Eric Hameleers.</pre>
 </body>
 </html>
